fix home page on iphone

--- a/app/assets/stylesheets/application.css.scss.erb.css
+++ b/app/assets/stylesheets/application.css.scss.erb.css
@@ -41,10 +41,13 @@ body.sessions_new #content {padding-top: 40px; text-align: center;}
 body.sessions_new #content h1 {margin-bottom: 30px;}
 body.sessions_new div[data-role="footer"] {display: none;}
 body.sessions_new a[href="#search"] {display: none;}
+body.sessions_new .search-b {display: none;}
 .search-form {display: none; text-align: center;}
 
 .ui-icon-loading {background-image: asset_url("loading.gif", image);}
 .spin {-webkit-animation-name: spinb;}
+body.sessions_new #content img {max-width: 100%;}
+
 
 
 .ui-btn-active {
